--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     <section id="contact">
         <div class="contact-form">
             <h2>contact</h2>
             <hr>
-            <form>
-                <input type="email" name="visitor-email" placeholder="your email" required>
-                <input type="text" name="subject-email" placeholder="subject" required>
-                <input type="text" name="freetext-email" placeholder="your message" required>
+            <form method="POST" action="/send" id="contact-form">
+                <input type="email" name="visitor-email" placeholder="your email" id="visitor-email" required>
+                <input type="text" name="subject-email" placeholder="subject" id="subject" required>
+                <input type="text" name="freetext-email" placeholder="your message" id="message" required>
                 <input type="submit" name="email-submit" value="Submit">
             </form>
         </div>
     </section>
-    <script scr="assets/js/index.js" type="text/javascript"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
