--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+</script>
 </head>
 <body>
     <section id="contact">
@@ -19,6 +20,12 @@
             </form>
         </div>
     </section>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_kiqzH3B0iil4Aqd5GL188");
+        })();
+    </script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
