--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section id="contact">
         <div class="contact-form">
-            <h2>contact</h2>
+            <h2 id="contact-heading">contact</h2>
             <hr>
             <form method="POST" action="/send" id="contact-form">
                 <input type="email" name="visitor-email" placeholder="your email" id="visitor-email" required>
