Finialized greeting message including summary of the message sent from submit form - included this in the artistpage

--- a/index.html
+++ b/index.html
@@ -4,22 +4,152 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</script>
+    <link rel="icon" href="assets/images/logo/dark.jpg">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Nikolay Cranner | Official Website</title>
 </head>
 <body>
+    <header>
+        <a href="#frontpage">
+            <img class="logo" src="assets/images/logo/dark.jpg" alt="logo-dark">
+        </a>
+    </header>
+    <nav>
+        <a href="#about">about</a>
+        <a href="#music">music</a>
+        <a href="#contact">contact</a>
+    </nav>
+    <section id="frontpage">
+        <div>
+            <h1>deep motion</h1>
+            <h4>Nikolay Cranner & Batuhan Celik</h4>
+            <div class="listen-now">
+                <form action="https://linktr.ee/nikolay_cranner" target="_blank">
+                    <button type="submit">listen now</button>
+                </form>
+                <iframe class="frontpage-preview" src="https://open.spotify.com/embed/album/2yCCbZxkp3gMeUIQcVt4d5?theme=0" allow="encrypted-media">
+                </iframe>
+                <p>A Norwegian producer, engineer, and writer with an 
+                    undisputed passion for jazz house and vocal house, 
+                    Nikolay Cranner is a highly accomplished producer with 
+                    a knack for tasteful production with a jazzy, organic edge. 
+                </p>
+                <img class="edmlogo" src="assets/images/others/edmlogo.JPG" alt="edmlogo">
+            </div>
+        </div>
+
+    </section>
+    <section id="about">
+        <div>
+            <h2>about</h2>
+            <hr>
+            <div class="about-paragraph">
+                <p>Nikolay Cranner is a fantastic talent hailing from Norway with a strong impact and 
+                    artistic identity in the House genre. He developed a strong interest for house music over 
+                    the years and felt he could use a way to express his musical ideas.
+                    Before producing he actively played the piano, trumpet and later saxophone.
+                    His productions (so far) explore deep/minimal, jazzy and funky styles.              
+                    <br>
+                    <br>
+                    “Darkest Love” is a mind-blowing deep house production. 
+                    The composition consists of melodic deep vocals by Kieran Fowkes, minted with a mid-range spacious lead. 
+                    The song is dominated by the sub-frequency domain and intertwined with harmonic chord progression, sparky synths and mysterious pads.
+                </p>
+                <p>
+                    In March 2020 he made his debut on Spanish imprint Cientoonce in Valencia with “Moving On EP”.
+                    It shows off a classy and wistful flurry of deep and blissed out chords and keys from Nikolay’s 
+                    crafty fingertips and a tasty rework from Victor Polo which leans more into the dancefloor fundamentals.
+                    <br>
+                    <br>
+                    Late 2019 he gave out a stunning vocal house production titled “Lies”. 
+                    This release sets the bar higher in terms of punch and attitude, 
+                    making for a unique flow in terms of rhythm, and melody. 
+                    The saxophone lead by Nikolay himself is organic and present, 
+                    cutting through the mix and giving it a jazzy vibe. 
+                    It also features French DJ/Producer "Siks" futuristic vocals performed by singer and songwriter “Eddie Jonsson”.
+                    He made his official debut on Trax Records in 2018, with "Dancin' EP".
+                </p>              
+            </div>
+            <br>
+            <br>
+            <div class="div-about">
+                <img class="insta" src="assets/images/insta/66317617_187877352206840_6345245516943889862_n.jpg" alt="sax">
+                <img class="insta" src="assets/images/insta/178739525_459882158576148_5494980839329259093_n.jpg" alt="fullscale">
+                <img class="insta" src="assets/images/insta/131887774_843013519818211_8180783687545272123_n.jpg" alt="studio">
+                <img class="insta" src="assets/images/insta/119993045_362681934915399_9051549321014501_n(1).jpg" alt="profile">
+            </div>
+
+        </div>
+            
+    </section>
+    <section id="music">
+        <div>
+            <h2>latest releases</h2>
+            <h3>songs and videos</h3>
+            <div class="div-music">
+                <h4>Deep Motion</h4>
+                <a href="https://linktr.ee/nikolay_cranner" target="_blank">
+                    <img class="cover-art" src="assets/images/coverart/deep_motion.jpg" alt="deep_motion">
+                </a>
+                <iframe class="youtube" src="https://www.youtube.com/embed/BSi5V5GA4AA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4>Darkest Love</h4>
+                <a href="https://soundcloud.com/nikolaycranner/nikolay-cranner-darkest-love" target="_blank">
+                    <img class="cover-art" src="assets/images/coverart/darkest_love.png" alt="darkest_love">
+                </a>
+                <iframe class= "youtube" src="https://www.youtube.com/embed/kBhZxNGpHpo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4>Lies - Radio Edit</h4>
+                <a href="https://open.spotify.com/track/77q2iLUesl4iaqrkfsTeq9?si=c63e3cc37e604a79" target="_blank">
+                    <img class="cover-art" src="assets/images/coverart/lies.png" alt="deep_motion">
+                </a>        
+                <iframe class ="youtube" src="https://www.youtube.com/embed/eZv7kjKSmSU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="spotify-artist" src="https://open.spotify.com/embed/artist/4NvkvOJ0mDM7QjdzOZLDRd?theme=0" allow="encrypted-media"></iframe>            
+                <h3>purchase on beatport</h3>
+                <iframe class="beatport" src="https://embed.beatport.com/?id=15370655&type=track"></iframe>
+                <iframe class="beatport" src="https://embed.beatport.com/?id=13286410&type=track"></iframe>
+                <iframe class="beatport" src="https://embed.beatport.com/?id=13286411&type=track"></iframe>
+            </div>
+        </div>
+      
+    </section>
     <section id="contact">
-        <div class="contact-form">
+        <div id="contact-div">
             <h2 id="contact-heading">contact</h2>
             <hr>
             <form method="POST" action="/send" id="contact-form">
                 <input type="email" name="visitor-email" placeholder="your email" id="visitor-email" required>
                 <input type="text" name="subject-email" placeholder="subject" id="subject" required>
-                <input type="text" name="freetext-email" placeholder="your message" id="message" required>
+             <!--   <input type="text" name="freetext-email" placeholder="your message" id="message" required>-->
+                <textarea name="freetext-email" id="message" placeholder="your message" required></textarea>
                 <input type="submit" name="email-submit" value="Submit">
             </form>
         </div>
+
     </section>
+    <footer>
+        <div>
+            <h2><span>follow me</span></h2>
+            <a href="https://www.instagram.com/nikolay_cranner/" aria-label="follow me on instagram" target="_blank">
+                <img id="follow-instagram" src="assets/images/icons/svg/instagram-2-1.svg" alt="instagram">
+            </a>
+            <a href="https://open.spotify.com/artist/4NvkvOJ0mDM7QjdzOZLDRd" aria-label="follow me on spotify" target="_blank">
+                <img id="follow-spotify" src="assets/images/icons/svg/spotify-2.svg" alt="spotify">
+            </a>
+            <a href="https://www.youtube.com/channel/UC5ntUYnW40FCXeuowJYUOPw" aria-label="follow me on youtube" target="_blank">
+                <img src="assets/images/icons/svg/youtube-3.svg" alt="youtube">
+            </a>
+
+            <a id="follow-soundcloud" href="https://soundcloud.com/nikolaycranner" aria-label="follow me on soundcloud" target="_blank">
+                <img src="assets/images/icons/svg/soundcloud.svg" alt="soundcloud">
+            </a>
+            <a id="follow-facebook" href="https://www.facebook.com/NikolayCranner/" aria-label="follow me on facebook" target="_blank">
+                <img src="assets/images/icons/svg/facebook-3.svg" alt="follow me on facebook">
+            </a>
+            <a id="follow-apple" href="https://music.apple.com/us/artist/nikolay-cranner/1423156749" aria-label="follow me on apple music" target="_blank">
+                <img src="assets/images/icons/svg/apple.svg" alt="follow me on apple music">
+            </a>
+            <p class="copyright" >©2021Nikolay Cranner</p>
+        </div>
+    </footer>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
